--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoAlumnosMateria.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoAlumnosMateria.html.twig
@@ -26,6 +26,25 @@
       #listadoAsistenciaMateria_filter input.form-control {
          margin-left: 10px;
       }
+      
+      #consultaAsistencia.btn {
+         border-radius: 5px;
+      }
+
+      /* afecta al calendario*/
+      .ui-widget-header {
+         background: #337AB7 none repeat scroll 0 0;
+         border: 1px solid #337ab7;
+      }
+      
+      .ui-widget-header select{
+            color: #000;
+            font-weight: normal;
+      }
+      
+      .ui-widget-content .ui-state-default {
+         background: #337AB7 none repeat scroll 0 0;
+     }
    </style>
 	<div class="col-lg-12">
 		<div class="panel panel-primary" style="border-radius: 0px;">
@@ -38,11 +57,11 @@
             
             <div id="selectorFechasAsistencia" class="col-lg-12">
                <div class="col-lg-12">
-                  <div class="col-lg-3"><span style="float:left;">Seleccionar Fechas: </span></div>
-                  <div class="col-lg-2"><span style="float:left; padding-left: 7px; margin-top: -5px;"><input id="fechasAsistenciasDesde" class="input-sm" type="text"/></span></div>
-                  <div class="col-lg-2"><span style="float:left; padding-left: 67px;"> hasta </span></div>
-                  <div class="col-lg-2"><span style="float:left; padding-left: 7px; margin-top: -5px;"><input id="fechasAsistenciasHasta" class="input-sm" type="text"/></span></div>
-                  <div class="col-lg-2"><span style="float:left; padding-left: 52px; margin-top: -2px;"><button class="btn btn-primary" type="button">Consultar</button></span></div>
+                  <div class="col-lg-3" style="padding-top: 5px;">Seleccionar Fechas:</div>
+                  <div class="col-lg-2"><input id="fechasAsistenciasDesde" style="width: 96px;" class="input-sm" type="text"/></div>
+                  <div class="col-lg-1" style="padding-top: 5px;">hasta</div>
+                  <div class="col-lg-2"><input id="fechasAsistenciasHasta" style="width: 96px;" class="input-sm" type="text"/></div>
+                  <div class="col-lg-2"><button id="consultaAsistencia" class="btn btn-primary" type="button">Consultar</button></div>
                </div>
             </div>                  
 				<table id="listadoAsistenciaMateria" class="table table-striped table-bordered">
@@ -60,7 +79,14 @@
 					  <tr>
                   <td> <div style="float:left;">{{ dataAsist.apellidos|upper }} <br/> {{ dataAsist.nombres|capitalize }}</div><!-- <div style="float:right;"><a class="btn btn-primary btn-circle" href="/SisAcade<!-- mico/web/app_dev.php/home/materias/1/2" title="Notas del Semestre"><i class="fa fa-book"></i></a></div> --></td>
 						{% for fechasAsistEstud in dataAsist.fechas %}
-                  <td style="text-align:center;"> <button class="btn {% if fechasAsistEstud == 'V' %} btn-success {% else %} btn-danger {% endif %} btn-circle" type="button" style="cursor: default;"><i class="fa fa-check"></i></button> </td>
+                     {% if fechasAsistEstud == 'V' %}
+                        {% set classSignColor   = ' btn-success ' %}
+                        {% set classSignAsist   = ' fa-check ' %}
+                     {% else %}
+                        {% set classSignColor   = ' btn-danger ' %}
+                        {% set classSignAsist   = ' fa-times ' %}
+                     {% endif %}
+                  <td style="text-align:center;"> <button class="btn {{classSignColor}} btn-circle" type="button" style="cursor: default;"><i class="fa {{classSignAsist}}"></i></button> </td>
 						{% endfor %}
 					  </tr>
 					{% endfor %}
