--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
@@ -2,12 +2,12 @@
 {% block home %}
 
  <!-- fullCalendar 2.2.5-->
-    <link rel="stylesheet" href="{{ asset('css/fullcalendar/fullcalendar.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/fullcalendar/fullcalendar.print.css') }}" media="print">
+    <link rel="stylesheet" href="{{ asset('theme/plugins/fullcalendar/fullcalendar.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('theme/plugins/fullcalendar/fullcalendar.print.css') }}" media="print">
     <link rel="stylesheet" href="{{ asset('css/skins/_all-skins.min.css') }}">
     <link rel="stylesheet" href="{{ asset('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css') }}">
     <link rel="stylesheet" href="{{ asset('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/fullcalendar/AdminLTE.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('theme/dist/css/AdminLTE.min.css') }}">
 
     <link type="text/css" rel="stylesheet" href="{{ asset('css/styles/animate.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('css/styles/all.css') }}">
@@ -82,7 +82,7 @@
 
         <!-- fullCalendar 2.2.5 -->
     <script src="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js') }}"></script>
-    <script src="{{ asset('js/fullcalendar/fullcalendar.min.js') }}"></script>
+    <script src="{{ asset('theme/plugins/fullcalendar/fullcalendar.min.js') }}"></script>
     <script src="{{ asset('js/flavr/flavr.js') }}"></script>
     <script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
     <script>
@@ -229,13 +229,11 @@
 
                 new $.flavr({
                     title       : 'Editar Evento',
-                    iconPath    : '#',
-                    icon        : '#',
                     content     : '',
                     dialog      : 'form',
                     form        : { content: html, method: 'post' },
                     onSubmit    : function( $container, $form ){
-                        // alert( $form.serialize() );
+                        event.title = {title};
                         return false;
                     }
                 });
