--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -24,6 +24,14 @@
                     </li>
 
                     {% endif %}
+                    {% if app.session.get('perfil') == perfilDocAdm or app.session.get('perfil') == perfilAdmin or app.session.get('perfil') == perfilEstAdm %}
+                    <li class=""><a href="{{path('admin_academico_home')}}"><i class="fa fa-graduation-cap">
+                        <div class="icon-bg bg-green"></div>
+                    </i><span class="menu-title">Admin</span></a>
+                       
+                    </li>
+
+                    {% endif %}
                     
                 </ul>
             </div>
