--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
@@ -21,7 +21,7 @@
                         <h4 class="panel-title">
                            <a id="idCarrera-{{datosCarrera.id_sa_carrera}}" class="linkCarreras" data-toggle="collapse" data-parent="#accordionCarreras" href="#collapse{{countCarreras+1}}">{{datosCarrera.nombre}}</a>
                            <div style="float:right; margin-top: -7px;">
-                              <button id="homeCarrera-{{datosCarrera.id_sa_carrera}}" class="btn btn-default btn-circle" type="button" style="font-size: 16px; padding: 2px 0;">
+                              <button id="homeCarrera-{{datosCarrera.id_sa_carrera}}" class="btn btn-default btn-circle" type="button" style="font-size: 16px; padding: 2px 6px;">
                                  <i class="fa fa-home"></i>
                               </button>
                            </div>
