--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/footer.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/footer.html.twig
@@ -1,5 +1,12 @@
-<div id="footer">
+{# <div id="footer">
     <div class="copyright">
     	<a href="http://www..cisc.ug.edu.ec">2015 © Grupo de Tesis Metodologia SCRUM :: Directed by Ing. Oscar Apolinario </a>
 	</div>
-</div>
+</div> #}
+
+<footer class="main-footer">
+	<div class="pull-right hidden-xs">
+		<b>Version</b> 2.3.0
+	</div>
+	<strong>Copyright &copy; 2015-2016 <a href="http://www..cisc.ug.edu.ec">Grupo de Tesis Metodologia SCRUM</a> :: </strong> Directed by Ing. Oscar Apolinario.
+</footer>
