--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/index.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/index.html.twig
@@ -8,10 +8,6 @@
 	{{ include( 'TitulacionSisAcademicoBundle:Home:menu_lateral.html.twig' ) }}
 {% endblock%}
 
-{% block titulo %}
-{#{ include( 'TitulacionSisAcademicoBundle:Home:titulo_pagina.html.twig' ) }#}
-{% endblock %}
-
 {% block contenido %}
 <div class="page-content">
 
@@ -42,7 +38,7 @@
 </div>    
 {% endblock %}
 {% block footer %}
-	{{ include( 'TitulacionSisAcademicoBundle:Home:footer.html.twig' ) }}
+	{# {{ include( 'TitulacionSisAcademicoBundle:Home:footer.html.twig' ) }} #}
 {% endblock %}
 
 
