--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoAlumnosMateria.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoAlumnosMateria.html.twig
@@ -1,4 +1,8 @@
 {% block listaNotasAlumnos %}
+   <link rel="stylesheet" href="{{ asset('theme/plugins/datepicker/datepicker3.css') }}">
+   <script src="{{ asset('theme/plugins/datepicker/bootstrap-datepicker.js') }}"></script>
+   <link rel="stylesheet" href="{{ asset('theme/plugins/daterangepicker/daterangepicker-bs3.css') }}">
+   <script src="{{ asset('theme/plugins/daterangepicker/daterangepicker.js') }}"></script>
    
    <style type="text/css">
       #listadoAsistenciaMateria_filter {
@@ -44,7 +48,12 @@
       
       .ui-widget-content .ui-state-default {
          background: #337AB7 none repeat scroll 0 0;
-     }
+      }
+      
+      .periodosAsistencia {
+         padding-left: 0px;
+         padding-right: 0px;
+      }
    </style>
 	<div class="col-lg-12">
 		<div class="panel panel-primary" style="border-radius: 0px;">
@@ -62,6 +71,14 @@
                   <div class="col-lg-1" style="padding-top: 5px;">hasta</div>
                   <div class="col-lg-2"><input id="fechasAsistenciasHasta" style="width: 96px;" class="input-sm" type="text" value="" /></div>
                   <div class="col-lg-2"><button id="consultaAsistencia" class="btn btn-primary" type="button">Consultar</button></div>
+                  <div class="col-lg-2 periodosAsistencia">
+                     <select id="periodosSelectAsistencia">
+                        <option value="">Selec. Rango</option>
+                        <option value="semanaActual">Semana Actual</option>
+                        <option value="mesActual">Mes Actual</option>
+                        <option value="mesActual">Ciclo Actual</option>
+                     </select>
+                  </div>
                </div>
             </div>                  
 				<table id="listadoAsistenciaMateria" class="table table-striped table-bordered">
@@ -106,28 +123,13 @@
                { targets: 'no-sort', orderable: false }
             ]
          });#}
-         $( "#fechasAsistenciasDesde" ).datepicker({
-            defaultDate: "+1w",
-            changeMonth: true,
-            numberOfMonths: 3,
-            onClose: function( selectedDate ) {
-              $( "#fechasAsistenciasHasta" ).datepicker( "option", "minDate", selectedDate );
-              
-            }
-         });
-         $( "#fechasAsistenciasDesde" ).datepicker( "option", "dateFormat", "dd/mm/yy" );
+         $( "#fechasAsistenciasDesde" ).datepicker({ format: 'dd/mm/yyyy' });
          $( "#fechasAsistenciasDesde" ).val('{{dataMateria.fechaInicio}}');
-            
-         $( "#fechasAsistenciasHasta" ).datepicker({
-            defaultDate: "+1w",
-            changeMonth: true,
-            numberOfMonths: 3,
-            onClose: function( selectedDate ) {
-              $( "#fechasAsistenciasDesde" ).datepicker( "option", "maxDate", selectedDate );
-            }
-         });
-         $( "#fechasAsistenciasHasta" ).datepicker( "option", "dateFormat", "dd/mm/yy" );
+         $( "#fechasAsistenciasDesde" ).datepicker('update');
+         
+         $( "#fechasAsistenciasHasta" ).datepicker({ format: 'dd/mm/yyyy' });
          $( "#fechasAsistenciasHasta" ).val('{{dataMateria.fechaFin}}');
+         $( "#fechasAsistenciasHasta" ).datepicker('update');
          
          $(document).ready(function(){
             var carreraSeleccionada = $("#carreraSeleccionada").val();
