--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -1,38 +1,31 @@
-    <nav id="sidebar" role="navigation" data-step="2" data-intro="Template has &lt;b&gt;many navigation styles&lt;/b&gt;"
-                data-position="right" class="navbar-default navbar-static-side">
-            <div class="sidebar-collapse menu-scroll">
-                <ul id="side-menu" class="nav">
-                    
-                     <div class="clearfix"></div>
-                    <li class="active"><a href="#"><i class="fa fa-tachometer fa-fw">
-                        <div class="icon-bg bg-orange"></div>
-                    </i><span class="menu-title">Dashboard</span></a></li>
-
-                    {% if app.session.get('perfil') == perfilDoc or app.session.get('perfil') == perfilEstDoc or app.session.get('perfil') == perfilDocAdm %}
-                    <li class=""><a href="{{path('SisAcademico_Docentes_home')}}"><i class="fa fa-users">
-                        <div class="icon-bg bg-pink"></div>
-                    </i><span class="menu-title">Docentes</span></a>
-                       
-                    </li>
-
-                    {% endif %}
-                    {% if app.session.get('perfil') == perfilEst or app.session.get('perfil') == perfilEstDoc or app.session.get('perfil') == perfilEstAdm %}
-                    <li class=""><a href="{{path('estudiantes_notas_actuales')}}"><i class="fa fa-graduation-cap">
-                        <div class="icon-bg bg-green"></div>
-                    </i><span class="menu-title">Estudiantes</span></a>
-                       
-                    </li>
-
-                    {% endif %}
-                    {% if app.session.get('perfil') == perfilDocAdm or app.session.get('perfil') == perfilAdmin or app.session.get('perfil') == perfilEstAdm %}
-                    <li class=""><a href="{{path('admin_academico_home')}}"><i class="fa fa-graduation-cap">
-                        <div class="icon-bg bg-green"></div>
-                    </i><span class="menu-title">Admin</span></a>
-                       
-                    </li>
-
-                    {% endif %}
-                    
-                </ul>
-            </div>
-        </nav>
+<aside class="main-sidebar">
+  <section class="sidebar">
+    <!-- sidebar menu: : style can be found in sidebar.less -->
+    <ul class="sidebar-menu">
+      <li class="header">MENU DE NAVEGACION</li>
+      <li class="treeview">
+        <a href="{{path('SisAcademico_Docentes_home')}}">
+          <i class="fa fa-laptop"></i><span>Docente</span>
+          <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+          <li><a href="{{path('SisAcademico_Docentes_home')}}"><i class="fa fa-circle-o"></i> Datos Generales</a></li>
+          <li><a href="#"><i class="fa fa-circle-o"></i> Asistencia de Alumnos</a></li>
+          <li><a href="#"><i class="fa fa-circle-o"></i> Ingreso de Notas</a></li>
+          <li><a href="#"><i class="fa fa-circle-o"></i> Vista por Asignatura</a></li>
+        </ul>
+      </li>
+      <li class="treeview">
+        <a href="#">
+          <i class="fa fa-edit"></i> <span>Estudiantes</span>
+          <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+          <li><a href="{{path('estudiantes_matriculacion')}}"><i class="fa fa-circle-o"></i> Matriculación</a></li>
+          <li><a href="{{path('estudiantes_deudas')}}"><i class="fa fa-circle-o"></i> Deudas Pendientes</a></li>
+          <li><a href="{{path('estudiantes_notas_actuales')}}"><i class="fa fa-circle-o"></i> Consulta de Notas</a></li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+</aside>
