--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
@@ -88,8 +88,6 @@
     <script>
       $(function () {
 
-        /* initialize the external events
-         -----------------------------------------------------------------*/
         function ini_events(ele) {
           ele.each(function () {
 
@@ -111,15 +109,18 @@
 
           });
         }
+
         ini_events($('#external-events div.external-event'));
+
 
         /* initialize the calendar
          -----------------------------------------------------------------*/
         //Date for the calendar events (dummy data)
-        var date = new Date();
-        var d = date.getDate(),
-                m = date.getMonth(),
-                y = date.getFullYear();
+            var date = new Date();
+            var d    = date.getDate(),
+                m    = date.getMonth(),
+                y    = date.getFullYear();
+
         $('#calendar').fullCalendar({
           header: {
             left: 'prev,next today',
@@ -179,9 +180,33 @@
           //     borderColor: "#3c8dbc" //Primary (light-blue)
           //   }
           // ],
+
           editable: true,
           droppable: true, // this allows things to be dropped onto the calendar !!!
-          drop: function (date, allDay) { // this function is called when something is dropped
+                 events: function (start, end, timezone, callback) {
+            $.ajax({
+                url: 'static-calendar-events.json',
+                type: "GET",
+                datatype: 'json',
+                success: function (doc) {
+                    var events = [];
+                    if ($(doc) != undefined && $(doc).Events.length > 0) {
+                        $(doc).Events.forEach(function (Obj) {
+                            events.push({
+                                title: Obj.Title,
+                                start: Obj.Start,
+                                end: Obj.End
+                            });
+
+                        });
+                    }
+                    callback(events);
+                },error: function (err) {
+                    alert('Error in fetching data');
+                }
+            });
+        },
+          drop: function (date, allDay) { // this function is called when something is dropped (evento cuando se deja caer un evento al calendario)
 
             // retrieve the dropped element's stored Event Object
             var originalEventObject = $(this).data('eventObject');
@@ -206,9 +231,11 @@
             }
 
           },
+
           select: function (start, end, allDay){
             alert("poppúp");
           },
+
           eventClick: function (calEvent, jsEvent, view){
 
             var html =                '   <div class="form-row">' +
@@ -233,7 +260,19 @@
                     dialog      : 'form',
                     form        : { content: html, method: 'post' },
                     onSubmit    : function( $container, $form ){
-                        event.title = {title};
+                         $.ajax({
+                            url: '',
+                            data: 'type=changetitle&title='+title+'&eventid='+event.id,
+                            type: 'POST',
+                            dataType: 'json',
+                            success: function(response){  
+                              if(response.status == 'success')
+                                      $('#calendar').fullCalendar('updateEvent',event);
+                            },
+                            error: function(e){
+                              alert('Error processing your request: '+e.responseText);
+                            }
+                          });
                         return false;
                     }
                 });
@@ -251,6 +290,7 @@
           //Add color effect to button
           $('#add-new-event').css({"background-color": currColor, "border-color": currColor});
         });
+
         $("#add-new-event").click(function (e) {
           e.preventDefault();
           //Get value and make sure it is not null
