--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -20,6 +20,9 @@
       <link rel="stylesheet" href="{{ asset('lib/iOS-Overlay/css/prettify.css') }}">
 
 
+      <link href="{{ asset('css/custom.css')}}" rel="stylesheet"> <!-- Libreria de form wizart matriculacion -->
+
+
     {% endblock %}
   <script src="{{ asset('js/script/jquery-1.10.2.min.js') }}"></script>
       <link rel="icon" type="image/x-icon" href="{{ asset('images/menu/ug_logo.png') }}" />
@@ -93,6 +96,13 @@
     <script src="{{ asset('js/mensajes.js') }}"></script>
     <!--CORE JAVASCRIPT-->
     <script src="{{ asset('js/script/main.js') }}"></script>
+
+
+    <script type="text/javascript" src="{{ asset('js/wizard/jquery.smartWizard.js') }}"></script> <!-- Matriculacion-->
+
+
+
+
     <!--script>        (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function () {
