--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -3,6 +3,7 @@
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu">
       <li class="header">MENU DE NAVEGACION</li>
+      {% if app.session.get('perfil') == perfilDoc or app.session.get('perfil') == perfilEstDoc or app.session.get('perfil') == perfilDocAdm %}
       <li class="treeview">
         <a href="{{path('SisAcademico_Docentes_home')}}">
           <i class="fa fa-laptop"></i><span>Docente</span>
@@ -15,6 +16,8 @@
           <li><a href="#"><i class="fa fa-circle-o"></i> Vista por Asignatura</a></li>
         </ul>
       </li>
+      {% endif %}
+      {% if app.session.get('perfil') == perfilEst or app.session.get('perfil') == perfilEstDoc or app.session.get('perfil') == perfilEstAdm %}
       <li class="treeview">
         <a href="#">
           <i class="fa fa-edit"></i> <span>Estudiantes</span>
@@ -26,6 +29,19 @@
           <li><a href="{{path('estudiantes_notas_actuales')}}"><i class="fa fa-circle-o"></i> Consulta de Notas</a></li>
         </ul>
       </li>
+      {% endif %}
+      {% if app.session.get('perfil') == perfilEstAdm or app.session.get('perfil') == perfilDocAdm %}
+      <li class="treeview">
+        <a href="#">
+          <i class="fa fa-edit"></i> <span>Administración</span>
+          <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+          <li><a href="{{path('admin_academico_home')}}"><i class="fa fa-circle-o"></i> Calendario por Carrera </a></li>
+
+        </ul>
+      </li>
+      {% endif %}
     </ul>
   </section>
 </aside>
