--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -127,12 +127,16 @@
           </ul>
         </li>
         <!-- Control Sidebar Toggle Button -->
+        {% if app.session.get('perfil') == perfilEst or app.session.get('perfil') == perfilEstDoc or app.session.get('perfil') == perfilEstAdm %}
         <li>
           <a href="{{path('estudiantes_notas_actuales')}}"><i class="fa fa-child"></i></a>
         </li>
+         {% endif %}
+         {% if app.session.get('perfil') == perfilEstAdm or app.session.get('perfil') == perfilDocAdm %}
         <li>
           <a href="{{path('SisAcademico_Docentes_home')}}"><i class="fa fa-user-plus"></i></a>
         </li>
+        {% endif %}
       </ul>
     </div>
   </nav>
