--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
@@ -5,6 +5,7 @@
 
 <link rel="stylesheet" href="{{ asset('js/lib/iOS-Overlay/css/iosOverlay.css') }}">
 <link rel="stylesheet" href="{{ asset('js/lib/iOS-Overlay/css/prettify.css') }}">
+<link rel="icon" type="image/x-icon" href="{{ asset('images/menu/ug_logo.png') }}" />
 
 <script src="{{ asset('js/script/jquery-1.10.2.min.js') }}"></script>
 <script src="{{ asset('js/flavr/flavr.js') }}"></script>
