--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
@@ -9,7 +9,7 @@
  			<p>Si hiciste esta petición, haz clic en el siguiente enlace, si no hiciste esta petición puedes ignorar este correo.</p>
  			<p>
  				<strong>Enlace para restablecer tu contraseña</strong><br>
- 				<a href="#"> Restablecer contraseña </a>
+ 				<a href="http://localhost{{path('admin_academico_cambio_pass')}}"> Restablecer contraseña </a>
  			</p>
 		</body>
 </html>
