--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
@@ -1,17 +1,16 @@
 {% block home %}
 
-<html>
-		<head>
- 			<title>Restablece tu contraseña</title>
-		</head>
-		<body>
- 			<p>Hemos recibido una petición para restablecer la contraseña de tu cuenta.</p>
- 			<p>Si hiciste esta petición, haz clic en el siguiente enlace, si no hiciste esta petición puedes ignorar este correo.</p>
- 			<p>
- 				<strong>Enlace para restablecer tu contraseña</strong><br>
- 				<a href="#"> Restablecer contraseña </a>
- 			</p>
-		</body>
-</html>
+<meta charset="utf-8">
+<div>
+	<p style="text-align: justify;">
+		Usted ha contactado con nosotros pidiendo soporte para su cuenta de UG. Academico, debido a que olvidó su contraseña.</br>
+		Por favor proceda al siguiente enlace para que pueda restaurar su contraseña y pueda seguir utilizando su cuenta.</br>
+		Si ud. no realizo esta peticion, haga caso omiso al correo y podra continuar con su clave actual.
+	</p>
+
+	<p>
+		<strong>De clic en el siguiente enlace para que pueda...  </strong><a href="#"> Restablecer contraseña </a>
+	</p>
+</div>
 
 {% endblock %}
