--- a/appAcademico/web/theme/main.css
+++ b/appAcademico/web/theme/main.css
@@ -12,5 +12,5 @@
 .panel-green {border-color: #5cb85c;}
 .panel-yellow>.panel-heading {color: #fff;background-color: #f0ad4e;border-color: #f0ad4e;}
 .panel-yellow {border-color: #f0ad4e;}
-.fa-5x {font-size: 3em;}
+.fa-5x {font-size: 3em !important;}
 .h3, h3 {font-size: 130%;margin-top: 10px;margin-bottom: 10px;}
