--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
@@ -1,17 +1,32 @@
-{% block home %}
-
-
 <meta charset="utf-8">
-<div>
-	<p style="text-align: justify;">
-		Usted ha contactado con nosotros pidiendo soporte para su cuenta de UG. Academico, debido a que olvidó su contraseña.</br>
-		Por favor proceda al siguiente enlace para que pueda restaurar su contraseña y pueda seguir utilizando su cuenta.</br>
+
+<div style="
+		background-color: #00c0ef;
+		width: 750px; 
+		font-family: monospace;
+    	font-size: 15px;
+	    border-radius: 2px;
+	    position: relative;
+	    display: block;
+	    margin-bottom: 20px;
+	    box-shadow: 0 1px 1px rgba(0,0,0,0.1);">
+
+	<div style="padding: 2%;">
+		Usted se ha contactado con soporte para su cuenta de UG. Academico, Por favor proceda al siguiente enlace para que pueda restaurar su contraseña.
+		</br>
+		</br>
 		Si ud. no realizo esta peticion, haga caso omiso al correo y podra continuar con su clave actual.
-	</p>
+	</div>
 
-	<p>
-		<strong>De clic en el siguiente enlace para que pueda...  </strong><a href="http://localhost{{path('admin_academico_cambio_pass')}}"> Restablecer contraseña </a>
-	</p>
+	<a href="http://localhost{{path('admin_academico_cambio_pass')}}" style="
+		position: relative;
+	    text-align: center;
+	    padding: 10px 0;
+	    color: #fff;
+	    color: rgba(255,255,255,0.8);
+	    display: block;
+	    z-index: 10;
+	    background: rgba(0,0,0,0.1);
+	    text-decoration: none;
+	    font-weight: bold;">Restablecer contraseña</a>
 </div>
-
-{% endblock %}
