--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
@@ -155,9 +155,10 @@ function login(){
 
                         return false;
                     }
-        },
-        Olvide: { text: 'Olvide mi clave',id:'recordar_link', style: 'danger', action: function(){ this.swing(); recordar_pass(); return false }},
-        Recuperar: { text: 'Enviar Mail',id:'enviar_mail', style: 'primary', action: function(){ this.swing(); enviar_mail($("#username").val()); return false }},
+        }
+        ,
+        // Olvide: { text: 'Olvide mi clave',id:'recordar_link', style: 'danger', action: function(){ this.swing(); recordar_pass(); return false }},
+        // Recuperar: { text: 'Enviar Mail',id:'enviar_mail', style: 'primary', action: function(){ this.swing(); enviar_mail($("#username").val()); return false }},
     }
 
 
