--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -17,6 +17,33 @@
 <script src="{{ asset('js/lib/iOS-Overlay/js/modernizr-2.0.6.min.js') }}"></script>
 <script src="{{ asset('js/lib/jquery-spin/spin.min.js') }}"></script>
 <script src="{{ asset('js/sistemau.functions.js') }}"></script>
+
+<style type="text/css">
+  .flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message form input {
+    width: 50% !important;
+    float: right !important;
+    margin: -50px 1px !important;
+}
+
+.flavr-container .flavr-fixer .flavr-outer {
+min-width: 500px !important;
+}
+
+.flavr-form{
+    margin: 20px 0px;
+    text-align: left;
+}
+
+.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-message {
+  line-height: 2.0;
+}
+
+.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-icon,
+.flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-title {
+  text-align: center;
+}
+</style>
+
 <script type="text/javascript">
 
   $(document).ready(function(){
@@ -61,6 +88,11 @@ function login(){
 
      $('.login-are').removeAttr('click');
     var html =
+        ' <div class="flavr-message"> Usuario:</div>'+
+        '   <div class="form-row">' +
+        '       <input id="usuario" type="text" name="usuario" ' +
+        '       placeholder="usuario"  required /> <p class="help-block"></p>' +
+        '   </div>' +
         ' <div class="flavr-message"> Ingrese su nueva Contraseña:</div>'+
         '   <div class="form-row">' +
         '       <input id="password1" type="password" name="password1" ' +
