--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -91,7 +91,7 @@ function login(){
 
                          $.ajax({
                              url:   '{{path('titulacion_sis_academico_ingresar')}}',
-                             data: {'user': $("#username").val(),'pass':$("#password").val()},
+                             data: {'user: $("#usuario").val(),pass1': $("#password1").val(),'pass2':$("#password2").val()},
 
                              type:  'post',
                              beforeSend: function () {
@@ -102,49 +102,7 @@ function login(){
                                   mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
                              },
                              success:  function (dataResponse) {
-
-                                  switch (dataResponse) {
-
-                                        case '{{perfilEst}}':
-                                            notificacionIndex = cargandoSitio(null, null, null);
-                                            sitioCargado(notificacionIndex);
-                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
-                                            location.href = '{{path('estudiantes_notas_actuales')}}';
-                                            break;
-                                        case '{{perfilDoc}}':
-                                            notificacionIndex = cargandoSitio(null, null, null);
-                                            sitioCargado(notificacionIndex);
-                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
-                                            location.href = '{{path('SisAcademico_Docentes_home')}}';
-                                            break;
-                                        case '{{perfilAdmin}}':
-                                            notificacionIndex = cargandoSitio(null, null, null);
-                                            sitioCargado(notificacionIndex);
-                                            $.growl.error({ message: "Perfil NO habilitado" });
-                                            //alertify.success("Bienvenido "+$("#username").val());
-                                            //location.href = '{#{path('dayscript_minisitio_login')}#}';
-                                            break;
-                                        case '{{perfilEstDoc}}':
-                                            notificacionIndex = cargandoSitio(null, null, null);
-                                            sitioCargado(notificacionIndex);
-                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
-                                            location.href = '{{path('estudiantes_notas_actuales')}}';
-                                            break;
-                                        case '{{perfilEstAdm}}':
-                                            notificacionIndex = cargandoSitio(null, null, null);
-                                            sitioCargado(notificacionIndex);
-                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
-                                            location.href = '{{path('estudiantes_notas_actuales')}}';
-                                            break;
-                                        case '{{perfilDocAdm}}':
-                                            notificacionIndex = cargandoSitio(null, null, null);
-                                            sitioCargado(notificacionIndex);
-                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
-                                            location.href = '{{path('SisAcademico_Docentes_home')}}';
-                                            break;
-                                        default:
-
-                                            mensaje_cisc( "error", "Usuario o constraseña incorrecto/a.");
+                                            // mensaje_cisc( "error", "Usuario o constraseña incorrecto/a.");
                                             break;
                                     }//end switch
 
