--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
@@ -49,7 +49,11 @@ function iniciar_sesion () {
 function enviar_mail (user) {
 
  $.post('{{path('titulacion_sis_academico_mail')}}', {user: user}, function(data) {
-   alert(data);
+   if (data == 1 ) {
+      mensaje_cisc( "notice", "Se envio un enlace a su correo electrónico.");
+   }else{
+     mensaje_cisc( "error", "Problemas de conexión al enviar correo electrónico.");
+   }
  });
 }
 
@@ -71,7 +75,6 @@ function login(){
         '   </div>' +
         '   <div class="form-row">' +
         '   <div class="form-row">' +
-        '       <a id="iniciar" href="#" onclick="iniciar_sesion();">Iniciar Sesión</a>' +
         '   </div>';
 
     new $.flavr({
@@ -157,10 +160,10 @@ function login(){
                     }
         }
         ,
-        // Olvide: { text: 'Olvide mi clave',id:'recordar_link', style: 'danger', action: function(){ this.swing(); recordar_pass(); return false }},
-        // Recuperar: { text: 'Enviar Mail',id:'enviar_mail', style: 'primary', action: function(){ this.swing(); enviar_mail($("#username").val()); return false }},
+        Olvide: { text: 'Olvide mi clave',id:'recordar_link', style: 'danger', action: function(){ this.swing(); recordar_pass(); return false }},
+        tada        : { text: 'Iniciar Sesión', id:'iniciar', style: 'info', action: function(){ this.tada(); iniciar_sesion(); return false }},
+        Recuperar: { text: 'Enviar Mail',id:'enviar_mail', style: 'primary', action: function(){ this.swing(); enviar_mail($("#username").val()); return false }},
     }
-
 
     });
     }
