--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -145,7 +145,8 @@ function login(){
 
                         return false;
                     }
-        }
+        },
+        close   : { style: 'default' }
 
     }
 
